tests/negativeTests/Modified_Hip-veTests/src/memory/hipMalloc_short.cpp
#include<iostream>
#include<string>
#include<hip/hip_runtime.h>
#include<hip/hip_runtime_api.h>

using namespace std;

int main()
{
string str;
str=hipGetErrorString(hipMalloc(NULL,NULL));
cout<<"the output of hipGetErrorString(hipMalloc(NULL,NULL) is: "<<str<<endl;



}
